// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberInputFieldV2 should render correctly 1`] = `
<DocumentFragment>
  .css-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-ztn6dz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-ztn6dz:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-ztn6dz[data-success='true'] {
  border-color: #22674e;
}

.css-ztn6dz[data-error='true'] {
  border-color: #b3144d;
}

.css-ztn6dz:hover {
  border-color: #792dd4;
}

.css-ztn6dz[data-readonly='true'] {
  border-color: #d9dadd;
  background: #f9f9fa;
  cursor: not-allowed;
}

.css-ztn6dz[data-disabled='true'] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.css-jyl6y4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 2px 8px;
}

.css-jyl6y4[data-size='small'] {
  height: 30px;
}

.css-jyl6y4[data-size='medium'] {
  height: 38px;
}

.css-jyl6y4[data-size='large'] {
  height: 46px;
  padding: 4px 8px;
}

.css-1ovv447 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.css-1ovv447:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1ovv447:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-1ovv447:hover,
.css-1ovv447:active {
  background: #e9eaeb;
  color: #222638;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-1mvom0f {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  border-width: 0 1px 0 1px;
  border-style: solid;
  border-color: inherit;
  background: inherit;
  width: 100%;
}

.css-jeg2os {
  outline: none;
  border: none;
  padding: 0;
  width: 100%;
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: Regular;
  line-height: 24px;
  text-align: center;
  padding: 8px;
  background: none;
}

.css-jeg2os[data-has-unit='true'] {
  text-align: left;
  padding: 8px 0 8px 8px;
}

.css-jeg2os::-webkit-outer-spin-button,
.css-jeg2os::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.css-jeg2os {
  -moz-appearance: textfield;
}

.css-jeg2os[data-size='small'] {
  height: 30px;
}

.css-jeg2os[data-size='medium'] {
  height: 38px;
}

.css-jeg2os[data-size='large'] {
  height: 46px;
}

.css-jeg2os:-moz-read-only {
  color: #3f4250;
  background: #f9f9fa;
}

.css-jeg2os:read-only {
  color: #3f4250;
  background: #f9f9fa;
}

.css-jeg2os:-moz-read-only~.e1b9qdjy2 {
  background: #f9f9fa;
}

.css-jeg2os:read-only~.e1b9qdjy2 {
  background: #f9f9fa;
}

.css-jeg2os:disabled {
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.css-jeg2os:disabled~.e1b9qdjy2 {
  background: #f3f3f4;
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.css-jeg2os:placeholder-shown~.e1b9qdjy2 {
  color: #727683;
}

<form>
    <div
      class="css-16otux ehpbis70"
    >
      <div>
        <div
          class="css-ztn6dz e1b9qdjy0"
          data-disabled="false"
          data-error="false"
          data-success="false"
          data-unit="false"
        >
          <div
            class="css-jyl6y4 e1b9qdjy4"
            data-size="large"
          >
            <button
              aria-label="minus"
              class="css-1ovv447 e112qvla0"
              type="button"
            >
              <svg
                class="css-1d5u3w3-sizeStyles e1gt4cfo0"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3.75 7C3.33579 7 3 7.33579 3 7.75C3 8.16421 3.33579 8.5 3.75 8.5L12.25 8.5C12.6642 8.5 13 8.16421 13 7.75C13 7.33579 12.6642 7 12.25 7H3.75Z"
                />
              </svg>
            </button>
          </div>
          <div
            class="e1b9qdjy3 css-1mvom0f e3f5lzv0"
          >
            <input
              class="css-jeg2os e1b9qdjy1"
              data-has-unit="false"
              data-size="large"
              id=":r0:"
              max="Infinity"
              min="0"
              name="test"
              placeholder=""
              type="number"
              value=""
            />
          </div>
          <div
            class="css-jyl6y4 e1b9qdjy4"
            data-size="large"
          >
            <button
              aria-label="plus"
              class="css-1ovv447 e112qvla0"
              type="button"
            >
              <svg
                class="css-1d5u3w3-sizeStyles e1gt4cfo0"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.75 3.75C8.75 3.33579 8.41421 3 8 3C7.58579 3 7.25 3.33579 7.25 3.75V7.25H3.75C3.33579 7.25 3 7.58579 3 8C3 8.41421 3.33579 8.75 3.75 8.75L7.25 8.75V12.25C7.25 12.6642 7.58579 13 8 13C8.41421 13 8.75 12.6642 8.75 12.25V8.75L12.25 8.75C12.6642 8.75 13 8.41421 13 8C13 7.58579 12.6642 7.25 12.25 7.25H8.75V3.75Z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`NumberInputFieldV2 should render correctly disabled 1`] = `
<DocumentFragment>
  .css-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-ztn6dz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-ztn6dz:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-ztn6dz[data-success='true'] {
  border-color: #22674e;
}

.css-ztn6dz[data-error='true'] {
  border-color: #b3144d;
}

.css-ztn6dz:hover {
  border-color: #792dd4;
}

.css-ztn6dz[data-readonly='true'] {
  border-color: #d9dadd;
  background: #f9f9fa;
  cursor: not-allowed;
}

.css-ztn6dz[data-disabled='true'] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.css-jyl6y4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 2px 8px;
}

.css-jyl6y4[data-size='small'] {
  height: 30px;
}

.css-jyl6y4[data-size='medium'] {
  height: 38px;
}

.css-jyl6y4[data-size='large'] {
  height: 46px;
  padding: 4px 8px;
}

.css-v7jpir {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
  color: #b5b7bd;
}

.css-v7jpir:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-1mvom0f {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  border-width: 0 1px 0 1px;
  border-style: solid;
  border-color: inherit;
  background: inherit;
  width: 100%;
}

.css-jeg2os {
  outline: none;
  border: none;
  padding: 0;
  width: 100%;
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: Regular;
  line-height: 24px;
  text-align: center;
  padding: 8px;
  background: none;
}

.css-jeg2os[data-has-unit='true'] {
  text-align: left;
  padding: 8px 0 8px 8px;
}

.css-jeg2os::-webkit-outer-spin-button,
.css-jeg2os::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.css-jeg2os {
  -moz-appearance: textfield;
}

.css-jeg2os[data-size='small'] {
  height: 30px;
}

.css-jeg2os[data-size='medium'] {
  height: 38px;
}

.css-jeg2os[data-size='large'] {
  height: 46px;
}

.css-jeg2os:-moz-read-only {
  color: #3f4250;
  background: #f9f9fa;
}

.css-jeg2os:read-only {
  color: #3f4250;
  background: #f9f9fa;
}

.css-jeg2os:-moz-read-only~.e1b9qdjy2 {
  background: #f9f9fa;
}

.css-jeg2os:read-only~.e1b9qdjy2 {
  background: #f9f9fa;
}

.css-jeg2os:disabled {
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.css-jeg2os:disabled~.e1b9qdjy2 {
  background: #f3f3f4;
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.css-jeg2os:placeholder-shown~.e1b9qdjy2 {
  color: #727683;
}

<form>
    <div
      class="css-16otux ehpbis70"
    >
      <div>
        <div
          class="css-ztn6dz e1b9qdjy0"
          data-disabled="true"
          data-error="false"
          data-success="false"
          data-unit="false"
        >
          <div
            class="css-jyl6y4 e1b9qdjy4"
            data-size="large"
          >
            <button
              aria-label="minus"
              class="css-v7jpir e112qvla0"
              disabled=""
              type="button"
            >
              <svg
                class="css-1d5u3w3-sizeStyles e1gt4cfo0"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3.75 7C3.33579 7 3 7.33579 3 7.75C3 8.16421 3.33579 8.5 3.75 8.5L12.25 8.5C12.6642 8.5 13 8.16421 13 7.75C13 7.33579 12.6642 7 12.25 7H3.75Z"
                />
              </svg>
            </button>
          </div>
          <div
            class="e1b9qdjy3 css-1mvom0f e3f5lzv0"
          >
            <input
              aria-label="Number Input"
              class="css-jeg2os e1b9qdjy1"
              data-has-unit="false"
              data-size="large"
              disabled=""
              id=":r4:"
              max="Infinity"
              min="0"
              name="test"
              placeholder=""
              type="number"
              value=""
            />
          </div>
          <div
            class="css-jyl6y4 e1b9qdjy4"
            data-size="large"
          >
            <button
              aria-label="plus"
              class="css-v7jpir e112qvla0"
              disabled=""
              type="button"
            >
              <svg
                class="css-1d5u3w3-sizeStyles e1gt4cfo0"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.75 3.75C8.75 3.33579 8.41421 3 8 3C7.58579 3 7.25 3.33579 7.25 3.75V7.25H3.75C3.33579 7.25 3 7.58579 3 8C3 8.41421 3.33579 8.75 3.75 8.75L7.25 8.75V12.25C7.25 12.6642 7.58579 13 8 13C8.41421 13 8.75 12.6642 8.75 12.25V8.75L12.25 8.75C12.6642 8.75 13 8.41421 13 8C13 7.58579 12.6642 7.25 12.25 7.25H8.75V3.75Z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`NumberInputFieldV2 should trigger event onMinCrossed & onMaxCrossed 1`] = `
<DocumentFragment>
  .css-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-ztn6dz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-ztn6dz:focus-within {
  border-color: #792dd4;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.css-ztn6dz[data-success='true'] {
  border-color: #22674e;
}

.css-ztn6dz[data-error='true'] {
  border-color: #b3144d;
}

.css-ztn6dz:hover {
  border-color: #792dd4;
}

.css-ztn6dz[data-readonly='true'] {
  border-color: #d9dadd;
  background: #f9f9fa;
  cursor: not-allowed;
}

.css-ztn6dz[data-disabled='true'] {
  border-color: #e9eaeb;
  background: #f3f3f4;
  cursor: not-allowed;
}

.css-jyl6y4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 2px 8px;
}

.css-jyl6y4[data-size='small'] {
  height: 30px;
}

.css-jyl6y4[data-size='medium'] {
  height: 38px;
}

.css-jyl6y4[data-size='large'] {
  height: 46px;
  padding: 4px 8px;
}

.css-1ovv447 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.css-1ovv447:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1ovv447:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.css-1ovv447:hover,
.css-1ovv447:active {
  background: #e9eaeb;
  color: #222638;
}

.css-1d5u3w3-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1d5u3w3-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.css-1mvom0f {
  display: grid;
  grid-template-columns: 1fr auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  border-width: 0 1px 0 1px;
  border-style: solid;
  border-color: inherit;
  background: inherit;
  width: 100%;
}

.css-jeg2os {
  outline: none;
  border: none;
  padding: 0;
  width: 100%;
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: Regular;
  line-height: 24px;
  text-align: center;
  padding: 8px;
  background: none;
}

.css-jeg2os[data-has-unit='true'] {
  text-align: left;
  padding: 8px 0 8px 8px;
}

.css-jeg2os::-webkit-outer-spin-button,
.css-jeg2os::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.css-jeg2os {
  -moz-appearance: textfield;
}

.css-jeg2os[data-size='small'] {
  height: 30px;
}

.css-jeg2os[data-size='medium'] {
  height: 38px;
}

.css-jeg2os[data-size='large'] {
  height: 46px;
}

.css-jeg2os:-moz-read-only {
  color: #3f4250;
  background: #f9f9fa;
}

.css-jeg2os:read-only {
  color: #3f4250;
  background: #f9f9fa;
}

.css-jeg2os:-moz-read-only~.e1b9qdjy2 {
  background: #f9f9fa;
}

.css-jeg2os:read-only~.e1b9qdjy2 {
  background: #f9f9fa;
}

.css-jeg2os:disabled {
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.css-jeg2os:disabled~.e1b9qdjy2 {
  background: #f3f3f4;
  cursor: not-allowed;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.css-jeg2os:placeholder-shown~.e1b9qdjy2 {
  color: #727683;
}

.css-v7jpir {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
  color: #b5b7bd;
}

.css-v7jpir:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<form>
    <div
      class="css-16otux ehpbis70"
    >
      <div>
        <div
          class="css-ztn6dz e1b9qdjy0"
          data-disabled="false"
          data-error="false"
          data-success="false"
          data-unit="false"
        >
          <div
            class="css-jyl6y4 e1b9qdjy4"
            data-size="large"
          >
            <button
              aria-label="minus"
              class="css-1ovv447 e112qvla0"
              type="button"
            >
              <svg
                class="css-1d5u3w3-sizeStyles e1gt4cfo0"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3.75 7C3.33579 7 3 7.33579 3 7.75C3 8.16421 3.33579 8.5 3.75 8.5L12.25 8.5C12.6642 8.5 13 8.16421 13 7.75C13 7.33579 12.6642 7 12.25 7H3.75Z"
                />
              </svg>
            </button>
          </div>
          <div
            class="e1b9qdjy3 css-1mvom0f e3f5lzv0"
          >
            <input
              aria-label="Number Input"
              class="css-jeg2os e1b9qdjy1"
              data-has-unit="false"
              data-size="large"
              id=":r8:"
              max="20"
              min="5"
              name="test"
              placeholder=""
              type="number"
              value="20"
            />
          </div>
          <div
            class="css-jyl6y4 e1b9qdjy4"
            data-size="large"
          >
            <button
              aria-label="plus"
              class="css-v7jpir e112qvla0"
              disabled=""
              type="button"
            >
              <svg
                class="css-1d5u3w3-sizeStyles e1gt4cfo0"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.75 3.75C8.75 3.33579 8.41421 3 8 3C7.58579 3 7.25 3.33579 7.25 3.75V7.25H3.75C3.33579 7.25 3 7.58579 3 8C3 8.41421 3.33579 8.75 3.75 8.75L7.25 8.75V12.25C7.25 12.6642 7.58579 13 8 13C8.41421 13 8.75 12.6642 8.75 12.25V8.75L12.25 8.75C12.6642 8.75 13 8.41421 13 8C13 7.58579 12.6642 7.25 12.25 7.25H8.75V3.75Z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
